--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@kyvg/vue3-notification": "^2.3.4",
+    "axios": "^0.27.2",
+    "vue": "^3.2.25",
+    "vue-toast-notification": "^3.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
